--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,7 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+login_check:
+   path:     /loginlagi
+logout:
+   path:     /keluaraja
