--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,16 +4,12 @@ security:
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory:
-              users:
-                 ryan:
-                        password: ryanpass
-                        roles: 'ROLE_USER'
-                 admin:
-                        password: $2y$12$UxjhUhZ7E2LNhGYZRICmqeii3L3Yp/HhGIARMXDF2RHSRkbZdwuuW
-                        roles: 'ROLE_ADMIN'
-
+        our_db_provider:
+            entity:
+                class: AppBundle:Akun
+                property: id
+                # if you're using multiple entity managers
+                # manager_name: customer
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -23,23 +19,20 @@ security:
         default:
             anonymous: ~
             http_basic: ~
-
-        main:
-            anonymous: ~
+            provider: our_db_provider
             form_login:
-                login_path: belajarlagi
-                target_path_parameter: login
-                check_path: belajarlagi
+              login_path: loginlagi
+              check_path: loginlagi
+            logout:
+                path: /keluardulu
 
     encoders:
-        Symfony\Component\Security\Core\User\User:
-            algorithm: bcrypt
-            cost: 12
-        AppBundle\Entity\Akun : bcrypt
+        AppBundle\Entity\Akun: plaintext
     access_control:
         # require ROLE_ADMIN for /admin*
-        - { path: ^/belajarlagi,roles: IS_AUTHENTICATED_ANONYMOUSLY}
-        - { path: ^/          , roles: ROLE_ADMIN }
+        - { path: ^/loginlagi, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+        - { path: ^/admin, roles: ROLE_ADMIN}
+        - { path: ^/keluaraja, roles: ROLE_USER }
             # activate different ways to authenticate
 
             # http_basic: ~
